--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dgwfnyn86/image/upload/v1748169433/logo-share-app_xzpnvb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PhotoShare</title>
-    <!-- Thêm font cho logo -->
-    <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
+    <title>Social Photo Sharing Platform</title>
 </head>
 <body>
 <div id="root"></div>
